twitch-bingo-extension/src/components/Mobile/BingoMobileEntryList.scss
@import './MobileTheme.scss';

.bingoEntry {
    display: grid;
    grid-template-columns: auto 1fr;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 5px;
    padding-right: 5px;
    min-height: 36px;
    overflow: hidden;
    border: $grid-fill-color;
    border-width: thick;
    border-style: solid;
    border-radius: 36px;

    display: grid;

    > div {
        align-self: center;
    };
    transition: all 0.5s;
    div.key {
        border-radius: 36px;
        background-color: $grid-fill-color;
        color: $grid-text-inverted;
        width: 36px;
        height: 36px;
        display: inline-block;
        text-align: center;
        vertical-align: middle;
        line-height: 36px;
        margin-right: 12px;
        grid-column: 1;
    }
    .timer {
        height: 0px;
        width: 0px;
        opacity: 0;
        transition: all 0.5s;
    };
    .text {
        text-overflow: ellipsis;
        grid-column-start: 2;
        grid-column-end: 4;
        color: $grid-text-color;
    }
    cursor: pointer;
}

.idle {
    background: $cell-fill-color-base;
};
.prompt {
    background: $cell-fill-color-base;
    border-color: $list-missed-text;
};
.pending {
    background: $list-pending-background;
    min-height: 50px !important;
};
.confirmed {
    background-color: $cell-fill-color-base;

    div.key {
        background-color: $marker-color;
    }

    div.text {
        color: $grid-text-color;
    }
};
.confirmed.highlighted {
    div.key {
        background-color: $marker-color;
    }
    div.text {
        color: $grid-text-color;
    }
}

.missed {
    background: $list-missed-background;
    color: $list-missed-text;
    div.key {
        background-color: $list-missed-key;
    }
};

.missed.highlighted {
    background: $list-missed-background;
    color: $list-missed-text;
};

.rejected {
    background: $list-missed-background;
    color: $list-missed-text;
    div.key {
        background-color: $list-missed-key;
    }
};

.rejected.highlighted {
    background: $list-missed-background;
    color: $list-missed-text;
};

.highlighted {
    height: unset;
    min-height: 36px;
    div.key {
        background-color: $cell-fill-color-base;
        color: $grid-fill-color;
        border: solid $grid-fill-color thin;
    }
    .timer {
        height: unset;
        width: fit-content;
        opacity: 1;
        grid-column: 1;
    };
    .text {
        text-overflow: unset;
        grid-column: 2;
    };
};

.prompting {
    height: unset;
    min-height: 64px;
    overflow-y: hidden;
    .confirm {
        border-top-right-radius: 0.25rem;
        border-bottom-right-radius: 0.25rem;
    };
    .cancel {
        border-top-left-radius: 0.25rem;
        border-bottom-left-radius: 0.25rem;
    };
}

.bingoCell {
    transition: opacity 0.3s;
    position: relative;
    z-index: 1;
    overflow: hidden;
    cursor: pointer;
};

.bingoCellPrompt {
    transition: all 0.5s;
    height: 100%;
    background-color: $grid-fill-color; // #fff3d6
    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.8);
    color: $grid-text-inverted;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    z-index: 10;
    position: absolute;
    right: 0rem;
    text-align: left;
    max-width: 10rem;
    padding: 0.5rem;
    align-items: center;
    display: grid;
    cursor: pointer;
};

.bingoCellPromptVisible {
    width: unset;
    opacity: 1.0;
    
    :active {
        cursor: pointer;
        background-color: rgba(251,247,239,0.8); // #fbf7ef
        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
    }
};

.bingoCellPromptHidden {
    opacity: 0.0;
    right: -10rem;
};

